--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
   }
 }
