--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/nodegit": "^0.27.3",
     "@types/uuid": "^8.3.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
@@ -25,7 +26,10 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodegit": "^0.27.0",
+    "octokit": "^1.5.0",
     "pg": "^8.7.1",
+    "simple-git": "^2.47.0",
     "typeorm": "^0.2.37",
     "typeorm-naming-strategies": "^2.0.0",
     "uuid": "^8.3.2"
