--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+    "build": "tsc --project tsconfig.json",
+    "start": "cross-env NODE_ENV=release node -r dotenv/config dist/index.js",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate --name",
     "migration:create": "typeorm migration:create --dir src/infrastructure/database/migrations --name",
@@ -18,12 +20,14 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/nodegit": "^0.27.3",
     "@types/uuid": "^8.3.1",
+    "cross-env": "^7.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
   },
   "dependencies": {
     "@status/codes": "^1.6.2",
     "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "nodegit": "^0.27.0",
