--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/nodegit": "^0.27.3",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
+    "@types/yamljs": "^0.2.31",
     "cross-env": "^7.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
@@ -34,8 +37,11 @@
     "octokit": "^1.5.0",
     "pg": "^8.7.1",
     "simple-git": "^2.47.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.37",
     "typeorm-naming-strategies": "^2.0.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yamljs": "^0.3.0"
   }
 }
