--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "cross-env NODE_ENV=release node -r dotenv/config dist/index.js",
     "dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate --name",
+    "migration:generate": "cross-env NODE_ENV=development ts-node ./node_modules/typeorm/cli.js migration:generate --name",
     "migration:create": "typeorm migration:create --dir src/infrastructure/database/migrations --name",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run"
   },
